# 3DViewer

./: README.md
src/: CMakeLists.txt  Makefile  main.cpp  readme.md
src/gifRecorder/: gifRecorder.cpp  gifRecorder.h  gifRecorderThread.cpp  gifRecorderThread.h
src/gifRecorder/gifEncoder/: README.md  demo.cpp  stb_image.h  test.cpp
src/gifRecorder/gifEncoder/egif/: GifEncoder.cpp  GifEncoder.h
src/gifRecorder/gifEncoder/egif/algorithm/: NeuQuant.cpp  NeuQuant.h
src/gifRecorder/gifEncoder/egif/giflib/: dgif_lib.cpp  egif_lib.cpp  gif_err.cpp  gif_hash.cpp  gif_hash.h  gif_lib.h  gif_lib_private.h  gifalloc.cpp  openbsd-reallocarray.cpp
src/savingFile/: GlWindowParamsSaver.h  SavedParams.cpp  SavingFile.cpp  SavingFile.h  test.cpp
src/tests/: backTests.c  backTests.h  edges_counter_test.cpp
src/tests/affine_tests/: matrixTest.c  rotatefTest.c  scaleTest.c  translatefTest.c
src/tests/dataset/: RightArrow.txt  cringe_cube.txt  cubecarcas.txt  no_faces.txt  no_model.txt  no_vertexes.txt  pyramid.txt  tetrahedron.txt
src/tests/parser_tests/: analyzeFileTest.c  coolGetLineTest.c  countVertexesTest.c  parseFacesTest.c  parseVertexesTest.c  readModelTest.c
src/ui/: test.pro
src/ui/glWindow/: gl_window.cpp  gl_window.h
src/ui/mainWindow/: mainWindowBackend.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/utils/: cores.h  edges_counter.cpp  edges_counter.h  untils.cpp  utils.h
src/viewModel/: common.h  parser.c  parser.h  s21_model.c
src/viewModel/affine/: affine.c  affine.h
src/viewModel/affine/matrix/: matrix.c  matrix.h
